--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,7 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project settisdngs
 .spyderproject
 .spyproject
 
@@ -142,7 +142,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
-
+.env
 # mypy
 .mypy_cache/
 .dmypy.json
