--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.454.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
