--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
+    "react-router": "^6.28.0",
+    "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
     "sort-by": "^1.2.0"
   },
