--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.7",
+    "html-react-parser": "^5.1.18",
     "localforage": "^1.10.0",
     "lucide-react": "^0.454.0",
     "match-sorter": "^7.0.0",
