--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.1.7",
     "html-react-parser": "^5.1.18",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
