--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: '22'  # 프로젝트에 맞는 Node.js 버전으로 설정
 
@@ -39,8 +39,8 @@ jobs:
           echo "${EC2_KEY}" > key.pem
           chmod 600 key.pem
 
-          # EC2 서버의 /var/www/html 경로에 빌드 파일 전송
-          scp -o StrictHostKeyChecking=no -i key.pem -r build/* ${EC2_USER}@${EC2_HOST}:/var/www/html
+          # EC2 서버의 /var/www/html 경로에 빌드된 dist 폴더 파일 전송
+          scp -o StrictHostKeyChecking=no -i key.pem -r dist/* ${EC2_USER}@${EC2_HOST}:/var/www/html
 
           # 서버에서 Nginx 재시작 (EC2 서버에서 sudo 권한을 요구하는 경우)
           ssh -o StrictHostKeyChecking=no -i key.pem ${EC2_USER}@${EC2_HOST} "sudo systemctl restart nginx"
