--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,14 +36,14 @@ jobs:
           EC2_KEY: ${{ secrets.EC2_KEY }}  # EC2_KEY 사용
         run: |
           # SSH 키 파일 생성 및 권한 설정 (확장자를 제거하여 OpenSSH 형식임을 명확히)
-          echo "${EC2_KEY}" > key
-          chmod 600 key
+          echo "${EC2_KEY}" > team_member_key
+          chmod 600 team_member_key
       
           # EC2 서버의 지정 경로에 빌드 파일 전송
-          scp -o StrictHostKeyChecking=no -i key -r dist/* ${EC2_USER}@${EC2_HOST}:/home/ubuntu/pda_data/pda-news-frontend/
+          scp -o StrictHostKeyChecking=no -i team_member_key -r dist/* ${EC2_USER}@${EC2_HOST}:/home/ubuntu/pda_data/pda-news-frontend/
       
           # Nginx 재시작
-          ssh -o StrictHostKeyChecking=no -i key ${EC2_USER}@${EC2_HOST} "sudo systemctl restart nginx"
+          ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "sudo systemctl restart nginx"
       
           # 배포 후 키 파일 제거
-          rm key
+          rm team_member_key
