--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # 최신 커밋을 가져오기 위해 모든 커밋을 가져옴
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
@@ -33,14 +35,17 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_KEY: ${{ secrets.EC2_KEY }}  # EC2_KEY 사용
+          EC2_KEY: ${{ secrets.EC2_KEY }}
         run: |
-          # SSH 키 파일 생성 및 권한 설정 (확장자를 제거하여 OpenSSH 형식임을 명확히)
+          # SSH 키 파일 생성 및 권한 설정
           echo "${EC2_KEY}" > team_member_key
           chmod 600 team_member_key
-      
-          # EC2 서버의 지정 경로에 빌드 파일 전송
+
+          # EC2 서버의 지정 경로에 빌드 파일 전송 (scp 옵션 최적화)
           scp -o StrictHostKeyChecking=no -i team_member_key -r dist/* ${EC2_USER}@${EC2_HOST}:/home/ubuntu/pda_data/pda-news-frontend/
+      
+          # EC2 서버에서 파일의 소유자와 권한 확인 및 설정
+          ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "sudo chown -R www-data:www-data /home/ubuntu/pda_data/pda-news-frontend && sudo chmod -R 755 /home/ubuntu/pda_data/pda-news-frontend"
       
           # Nginx 재시작
           ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "sudo systemctl restart nginx"
