--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,16 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Verify dist directory
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "dist directory not found. Build may have failed."
+            exit 1
+          fi
+          echo "dist directory found. Build succeeded."
+
       - name: Deploy to EC2
+        if: success()  # 빌드가 성공했을 경우에만 배포 진행
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
@@ -41,14 +50,14 @@ jobs:
           echo "${EC2_KEY}" > team_member_key
           chmod 600 team_member_key
       
-          # EC2 서버에서 기존 파일 삭제 전 권한 및 소유자 설정
+          # EC2 서버에서 기존 dist 디렉토리 삭제 전 권한 및 소유자 설정
           ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "sudo chown -R ${EC2_USER}:${EC2_USER} /home/ubuntu/pda_data/pda-news-frontend && sudo chmod -R 755 /home/ubuntu/pda_data/pda-news-frontend"
           
-          # EC2 서버의 기존 파일 삭제
-          ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "rm -rf /home/ubuntu/pda_data/pda-news-frontend/*"
+          # EC2 서버의 기존 dist 디렉토리 삭제
+          ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "rm -rf /home/ubuntu/pda_data/pda-news-frontend/dist/*"
       
-          # EC2 서버의 지정 경로에 빌드 파일 전송
-          scp -o StrictHostKeyChecking=no -i team_member_key -r dist/* ${EC2_USER}@${EC2_HOST}:/home/ubuntu/pda_data/pda-news-frontend/
+          # EC2 서버의 dist 디렉토리에 빌드 파일 전송
+          scp -o StrictHostKeyChecking=no -i team_member_key -r dist/* ${EC2_USER}@${EC2_HOST}:/home/ubuntu/pda_data/pda-news-frontend/dist/
           
           # Nginx 재시작
           ssh -o StrictHostKeyChecking=no -i team_member_key ${EC2_USER}@${EC2_HOST} "sudo systemctl restart nginx"
